--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Phone Store</string>
+    <string name="next">Вперёд</string>
+    <string name="back">Назад</string>
 </resources>
